--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1623,107 +1623,107 @@ stories:
   domain: http://www.capecodonline.com/
   link: http://capecodonline.com/2019/10/16/three-great-fall-walks-on-cape-cod/
 images:
-- name: meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
-- name: containership-bw-storytelling.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling.png
-- name: copper-circuit-cemetery_35902984304_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cemetery_35902984304_o.jpg
-- name: miamibeach-miamibeach-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-hot-spicy.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-- name: paris-paris-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-creativity.jpg
-- name: oldcabin-oldcabin-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-neo-instinct.jpg
-- name: san-francisco-street-view-san-francisco-street-view-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-emily-carr.jpg
-- name: razorcliff-razorcliff.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff.jpg
-- name: downtown-los-angeles-downtown-la-ww2-dresden.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-dresden.JPG
-- name: power-lines-power-lines-empty-space-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-space-pizza.jpg
-- name: stalin-time-docs-cranes-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-docs-cranes-waterfront.jpg
-- name: white-house-lawn-white-house-window-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-missle.jpg
-- name: white-house-lawn-white-house-window-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-graham-sutherland.jpg
-- name: nazi-invasion-IMG_7916.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7916.jpg
-- name: san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-- name: mistywoods-babyfoot-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
-- name: oldcabin-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crabapple.jpg
-- name: catacombs-catacombs-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-collage.jpg
-- name: old-gas-pumps-oldgaspumps-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gan-vogh.jpg
-- name: paris-paris-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purple-pond.jpg
-- name: windowmountain-window-mountain-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crunch-paper.jpg
-- name: death-valley-death-valley-national-park-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-constitution.jpg
-- name: powerlines-power-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-ww2-color.jpg
-- name: white-house-lawn-white-house-lawn-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sand-paper.jpg
-- name: border-crossing-bordercrossing-space-pizza.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-space-pizza.png
-- name: server-cloud-server-racks-clouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-hot-spicy.jpg
-- name: bordercrossing-bordercrossing-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
-- name: oldhouse-oldhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-space-pizza.jpg
-- name: hollywood-building-hollywood-building-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-bright-sand.jpg
-- name: old-school-house-old-schoolhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-ww2-dresden.jpg
-- name: old-barn-old-barn-1500-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kandinsky-bv.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
-- name: razorcliff-razorcliff-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purp-paper.jpg
-- name: sand-hand-sand-hand-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-ww2-color.jpg
-- name: la-muse-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-building-trees-sky.jpg
-- name: downtown-trucksilo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-deep-connections.jpg
-- name: border-fence-border-fence-on-hill-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-alien-goggles.jpg
-- name: statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
-- name: statue-of-liberty-front-view-statueofliberty-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-oily-mcoilface.jpg
-- name: razorwire-DSC-0080-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-really-hot.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
-- name: la-muse-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-castle-clouds-green-lawn.jpg
-- name: gears-4882162452-fa3126b38d-b-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-constitution.jpg
-- name: old-school-house-old-schoolhouse-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-horiz-circuit.jpg
-- name: status-berlin-status-berlin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-dream.jpg
-- name: stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: dragon-desert-desert-dragon-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-emily-carr.jpg
-- name: oldhouse-granaryfield-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-bright-sand.jpg
-- name: stories-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-crabapple.jpg
+- name: copper-circuit-rocking-chair-on-porch_36332220150_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-rocking-chair-on-porch_36332220150_o.jpg
+- name: sand-hand-sand-hand-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
+- name: bf-skinner-times-square-up-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-times-square-up-road.jpg
+- name: braceros-domingo-ulloa-train-tracks-seattle-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-tracks-seattle-waterfront.jpg
+- name: copper-circuit-IMG_4430.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_4430.jpg
+- name: catacombs-catacombs-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kand-two.jpg
+- name: server-cloud-server-racks-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smoking-cigarette.jpg
+- name: victoria-victoria-corner-hotel-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-attack-planes.jpg
+- name: status-berlin-status-berlin-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
+- name: mistywoods-babyfoot-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-constitution.jpg
+- name: mosaic-face-mosaic-face-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-space-pizza.jpg
+- name: braceros-domingo-ulloa-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-hotel-down-sidewalk.jpg
+- name: fence-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crabapple.jpg
+- name: copper-circuit-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-roman-marcus-looking-down.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
+- name: server-cloud-server-racks-door-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-free-woman.jpg
+- name: beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
+- name: abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+- name: school-clouds-church-clouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-bright-sand.jpg
+- name: old-barn-old-barn-1500-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-space-pizza.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-dali.jpg
+- name: death-valley-death-valley-national-park-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
+- name: oldroad-old-road-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-monet-one.jpg
+- name: mediterranean-mediterranean-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-gan-vogh.jpg
+- name: school-clouds-church-clouds-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-graham-sutherland.jpg
+- name: oldroad-old-road-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-plentiful.jpg
+- name: wind-mills-windmills-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-mucha-mult.jpg
+- name: old-cabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-missle.jpg
+- name: aws-s3-square-raven-fence-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-raven-fence-square.jpg
+- name: razorcliff-razorcliff-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-aqua.jpg
+- name: fence-fence-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sand-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
+- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-paper.jpg
+- name: adam-smith-adam-smith-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-soul.jpg
+- name: stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-matrix.jpg
+- name: hollywood-building-hollywood-building-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-sand-paper.jpg
+- name: locked-up-steam-lock-up-steam-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
+- name: blossombar-crafty-painting-file-00-00-50-08.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-08.jpg
+- name: amusement-park-amusement-park-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
+- name: gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+- name: subway-subway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-paper.jpg
+- name: catacombs-catacombs-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-electricity.jpg
+- name: border-crossing-bordercrossing-yellow-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-paper.png
+- name: walled-garden-walled-garden-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
+- name: rain-princess-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-construction-crane-city.jpg
+- name: oldroad-old-road-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-clean-view.jpg
+- name: birdhouse-birdhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-circuit.jpg
+- name: catacombs-catacombs-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-green-zuma.jpg
+- name: oldcabin-store-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-blocks.jpg
+- name: old-church-oldchurch-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
+- name: school-clouds-church-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crafty-painting.jpg
 ---
 Shawnee Employees, Partners Win Regional Awards.&nbsp;Wyoming, Georgia State Bring Similar Approaches Into Arizona Bowl.&nbsp;Hawesville Man Featured On Sportsman Channel This Week.&nbsp;Second Man Charged In Connection With Creston Bank Robbery.&nbsp;We Love The Daily Grind.&nbsp;Portraits Of Frida To Go On Display At Hilltop Gallery.&nbsp;Colombia Proposes To Resume Aerial Spraying Of Coca Fields.&nbsp;Peach Bowl Tennessee Indiana.&nbsp;
